# kuu_navigator

./: .gitmodules  README.md
application/: .gitignore  conftest.py  main.py  pyproject.toml  requirements.txt
application/app/: __init__.py  app.py  conftest.py  dimensionreducer.py  mathutils.py  test_mathutils.py  testutils.py  toolboxwindow.py  window.py
application/app/datasource/: __init__.py  api.py  numpyimages.py  simulated.py  test_api.py  test_simulated.py
application/app/dimensionreduction/: __init__.py  algebra.py  api.py  linear.py  mds.py  null.py  pca.py  test_algebra.py  test_linear.py  test_mds.py  test_parameters.py  test_pca.py  weight.py
application/app/dimensionreduction/_algorithm/: __init__.py  api.py  mds.py  test_mds.py
application/app/eventprocessing/: __init__.py  eventprocessor.py  inputdevicewatcher.py  keyprocessor.py  mouseprocessor.py  test_eventprocessor.py
application/app/guiplatform/: __init__.py  spawnwxloop.py
application/app/guiplatform/wxFormBuilder/: __init__.py  project.fbp  toolboxframe.py
application/app/nodes/: __init__.py  birdseyecamera.py  camera.py  light.py  navigationcamera.py  node.py  test_birdseyecamera.py  test_camera.py  test_visualnode.py  visualinformation.py  visualnode.py
application/app/scenes/: __init__.py  command.py  configuration.py  detailscene.py  navigationcommands.py  navigationscene.py  scene.py  test_navigationcommands.py  test_navigationcommmands_combinations.py  testutils.py
application/docs/: pyreverse.bash
application/docs/source/: .gitignore  conf.py  index.rst  predefined.inc
application/parameters/: __init__.py  null_grid_5d.txt  oriented_mds_6d_300k.txt  oriented_mds_grid_3d.txt  oriented_mds_isotropic_6d_300k.txt  oriented_pca_200d_300k_isotropic.txt  oriented_pca_6d_10k.txt  oriented_pca_6d_300k.txt  oriented_pca_6d_300k_isotropic.txt  oriented_pca_6d_300k_wide_gaussian_weight.txt  oriented_pca_6d_300k_wide_linear_weight.txt  oriented_pca_desk_3d.txt  oriented_pca_desk_4d.txt  oriented_pca_desk_5d.txt  oriented_pca_few.txt  oriented_pca_grid_12d_isotropic.txt  oriented_pca_grid_200d.txt  oriented_pca_grid_200d_isotropic.txt  oriented_pca_grid_3d.txt  oriented_pca_grid_3d_isotropic.txt  oriented_pca_grid_3d_line.txt  oriented_pca_grid_3d_small.txt  oriented_pca_grid_4d.txt  oriented_pca_grid_4d_isotropic.txt  oriented_pca_grid_6d.txt  oriented_pca_grid_6d_isotropic.txt  oriented_pca_less_6d_300k.txt  oriented_pca_less_grid_5d.txt  oriented_pca_random_4d.txt  oriented_pca_random_6d.txt  oriented_pca_swiss_roll_3d_in_5d.txt  oriented_pca_swiss_roll_5d_in_10d.txt  oriented_pca_swiss_roll_in_3d.txt  oriented_pcoa_grid_3d.txt  pca_null_grid_5d.txt  test_parameters.py
application/parameters/data_source/: desk_3d.json  desk_4d.json  desk_5d.json  gaussian_200d_300k_isotropic.json  gaussian_6d_10k.json  gaussian_6d_300k.json  gaussian_6d_300k_isotropic.json  grid_data_12d_isotropic.json  grid_data_200d.json  grid_data_200d_isotropic.json  grid_data_3d.json  grid_data_3d_few.json  grid_data_3d_isotropic.json  grid_data_3d_line.json  grid_data_3d_small.json  grid_data_4d.json  grid_data_4d_isotropic.json  grid_data_5d.json  grid_data_6d.json  grid_data_6d_isotropic.json  random_data_4d.json  random_data_6d.json  swiss_roll_3d_in_5d.json  swiss_roll_5d_in_10d.json  swiss_roll_in_3d.json
application/parameters/dimension_reduction/: null.json  oriented_mds.json  oriented_pca.json  oriented_pca_less.json  oriented_pcoa.json  oriented_weighted_pca_gaussian_weight.json  oriented_weighted_pca_linear_weight.json  pca.json
